# agent-control-plane

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CLAUDE.md  GEMINI.md  LICENSE  Makefile  README.md  pyproject.toml
.github/: pull_request_template.md
docs/: architecture.md  compatibility.md  continuous_operation_playbook.md  integration_identity.md  operations_runbook.md  security_model.md
examples/: asciinema_sync_demo.py  audit_viewer.py  claude_agent_sdk_integration.py  cloud_ops_agent.py  compliance_agent.py  condition_tree_evaluator_demo.py  continuous_loop_governance.py  cyber_agent.py  finance_agent.py  ghosted_agent.py  google_adk_integration.py  governance_demo_common.py  langchain_multi_agent_integration.py  long_running_autonomous_agent.py  mcp_tool_gateway.py  moderation_agent.py  multi_agent_continuous_loop.py  multi_agent_delegation.py  openai_agents_sdk_integration.py  panic_agent.py  quickstart.py  quickstart_sync.py  rate_limited_agent.py  resilient_facade_demo.py  security_agent.py  session_risk_accumulator_demo.py  sierra_agent_sdk_integration.py  single_agent_continuous_loop.py  sre_agent.py  state_feed_projection.py  steering_demo.py  support_agent.py  sync_adapter.py  tenant_budget_tracking.py  token_governance_demo.py  zombie_agent.py
scripts/: docs_drift_check.sh  release_tag.py  run_asciicast_agent_story.sh  run_asciinema_demo.sh  validate_openapi.py
tests/: fakes.py  test_agent_registry.py  test_agentic_primitives.py  test_alias_profiles_and_extensions.py  test_approval_gate.py  test_async_facade.py  test_async_resilient.py  test_benchmark_protocol.py  test_budget_tracker.py  test_companion_gateway_contract.py  test_condition_trees.py  test_enums.py  test_evaluator_plugins.py  test_event_store.py  test_experimental_capabilities.py  test_idempotency.py  test_kill_switch.py  (+17 more)
(+80 files in other folders)
