[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agent-control-plane"
version = "0.1.9"
description = "Embeddable governance framework for agentic AI — approval gates, policy engine, budget tracking, kill switches, event sourcing, crash recovery"
readme = "README.md"
authors = [{ name = "Ryan Williams" }]
license = { file = "LICENSE" }
requires-python = ">=3.11"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]
keywords = ["ai", "agents", "governance", "control-plane", "approval", "policy"]
dependencies = [
    "sqlalchemy>=2.0",
    "pydantic>=2.0",
]

[project.optional-dependencies]
asyncpg = ["asyncpg>=0.28"]
dev = ["pytest>=8.0", "pytest-asyncio>=0.23", "aiosqlite>=0.20", "greenlet>=3.0", "ruff>=0.4", "mypy>=1.10", "pre-commit>=3.7", "radon>=6.0"]

[project.urls]
Homepage = "https://github.com/ryanwi/agent-control-plane"
Repository = "https://github.com/ryanwi/agent-control-plane"
Issues = "https://github.com/ryanwi/agent-control-plane/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/agent_control_plane"]

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "C90", "N", "RUF"]

[tool.ruff.lint.mccabe]
max-complexity = 10

[tool.mypy]
python_version = "3.11"
strict = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
